Improved the display of the sub buttons of Our Suggested Pick and the Discovery Quiz. Changed title to "Compass" added google fonts to heading/subheading.

--- a/assets/css/custom-css/customizeTemplate.css
+++ b/assets/css/custom-css/customizeTemplate.css
@@ -31,3 +31,13 @@ h3 {
     font-size: 18px;
     font-weight: bold;
   }
+
+  .headingText {
+    font-weight: bold;
+    font-family: 'Titillium Web', sans-serif;
+  }
+
+  .subheadingText {
+    font-family: 'PT Sans', sans-serif;
+    font-size: 20pt;
+  }
